fix: wrap the grid in a wrapper to ensure it takes up the entire space, this is to ensure that the pagination controls are always at the bottom

--- a/src/styles/Tourspage.module.css
+++ b/src/styles/Tourspage.module.css
@@ -16,8 +16,14 @@
   	margin-bottom: 24px;
 }
 
-.grid {
+.content-wrapper {
 	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.grid {
   	display: grid;
   	grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
   	gap: 24px;
